# StudentCLI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  grader.sh  multi-grader.sh  requirements.txt  stugrad  stugrad.cpp
Homework4/CalvinHomework4/: Airplane.java  Readmehw4.txt
Homework4/CalvinHomework4/__MACOSX/: ._Readmehw4.txt
Homework4/DummyHomework4/Dummy-Homework4/: Airplane.java
Homework4/RobertHomework4/: Airplane.java  readme.txt
Homework4/RuiyangHomework4/: Airplane.java  readme.txt
Homework4/ScottHomework4/: Airplane.java  readme.txt
Homework4/TianyouHomework4/: Airplane.java  readme.txt
Homework4/YiwenHomework4/Homework4/: Airplane.java  readme.pages
gradebook/: stg
grader_dir/: stg
scripts/: grader.sh  old_grader.sh  view_grade.sh  view_grades.sh
src/: cli.cpp  cli.h  commands.cpp  commands.h  main.cpp
testCases/inputs/allProfit/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/inputs/massDecline/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/inputs/profitChoices/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/inputs/rangeDecline/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/inputs/tooCheap/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/inputs/writeupExamples/: 1.txt  2.txt  3.txt  4.txt  5.txt
testCases/runs/Calvin/: REPORT.txt
testCases/runs/Luke/: REPORT.txt
testCases/runs/ME/: REPORT.txt
testCases/runs/Robert/: REPORT.txt
testCases/runs/RobertH/: REPORT.txt
testCases/student/allProfit/: 1_out.txt  2_out.txt  3_out.txt  4_out.txt  5_out.txt
testCases/student/profitChoices/: 1_out.txt  2_out.txt  3_out.txt  (+2 more)
(+28 files in other folders)
